--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,25 @@
-h1 {
-    background-color: pink;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family:"";
+}
+
+body {
+    display: flex;  
+    justify-content: center; 
+    align-items: center; 
+    background-color: #f5e5fc; 
+    min-height: 100vh; 
+    min-width: 100vw; 
+}
+
+.gameArea {
+    display: flex; 
+    flex-direction: column; 
+    align-items: center; 
+    background-color: #48b8d0;
+    padding: 4rem; 
+    min-width: ""; /*to stop the cards from changing size with different words*/
+    min-height:"" ;
 }
