--- a/assets/style.css
+++ b/assets/style.css
@@ -25,6 +25,8 @@ body {
     min-height: "";
 }
 
+/*Need to wrap contents of game area in div and space out*/
+
 .myInput {
     letter-spacing: 0.1rem; 
     max-width: 4rem;
