--- a/assets/style.css
+++ b/assets/style.css
@@ -29,6 +29,7 @@ body {
 
 .myInput {
     letter-spacing: 0.1rem; 
-    max-width: 4rem;
+    max-width: 4.5rem;
+    font-size: 1.5rem; 
     text-align: center; 
 }
