--- a/assets/style.css
+++ b/assets/style.css
@@ -18,14 +18,33 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     background-color: #48b8d0;
     padding: 4rem;
     max-width: 12rem;
     /*to stop the cards from changing size with different words*/
     max-height: 12rem;
+    border-radius: 5px;
 }
 
 /*Need to wrap contents of game area in div and space out*/
+
+.btn_start {
+    border-radius: 4px;
+    border: none;
+    padding: 0.75rem;
+    margin: 5px 5px;
+    width: 7rem;
+}
+
+/*Created class .click_button so can target text*/
+.click_button {
+    text-align: center;
+    background-color: pink;
+    margin: 5px 5px;
+    width: 7rem;
+
+}
 
 .myInput {
     letter-spacing: 0.1rem;
@@ -33,4 +52,6 @@ body {
     max-height: 3rem;
     font-size: 1.5rem;
     text-align: center;
+    border-radius: 5px;
+    margin: 5px 5px;
 }
