--- a/assets/style.css
+++ b/assets/style.css
@@ -51,7 +51,8 @@ body {
     max-width: 4.7rem;
     max-height: 3rem;
     font-size: 1.5rem;
-    text-align: center;
+    text-align: center; 
     border-radius: 5px;
-    margin: 5px 5px;
+    padding: 0.2rem;
+    margin: 5px 5px; 
 }
