--- a/assets/style.css
+++ b/assets/style.css
@@ -35,12 +35,18 @@ body {
     color: white; 
 }
 
+/* Varied by changing CSS from tutorial  */
 .btn_start {
     border-radius: 4px;
     border: none;
     padding: 0.75rem;
     margin: 5px 5px;
     width: 7rem;
+}
+
+/* To add hover color change to button */
+.btn_start:hover {
+    background-color: ""; 
 }
 
 /*Created class .click_button so can target text*/
