--- a/assets/style.css
+++ b/assets/style.css
@@ -21,9 +21,11 @@ body {
     justify-content: center;
     background-color: #48b8d0;
     padding: 4rem;
-    max-width: 12rem;
+    min-width: 20rem;
+    max-width: 20rem; 
     /*to stop the cards from changing size with different words*/
-    max-height: 12rem;
+    max-height: 20rem;
+    min-height: 20rem; 
     border-radius: 5px;
 }
 
