Edit so scoreboard will say out of 5

--- a/assets/style.css
+++ b/assets/style.css
@@ -72,6 +72,15 @@ body {
 
 }
 
+.myWords {
+    background-color: paleturquoise;
+    width: 13rem;
+    letter-spacing: 0.5rem;
+    text-align: center; 
+    position: relative; 
+    padding: 0.5rem;
+    
+}
 .myInput {
     letter-spacing: 0.1rem;
     /* max-width: 4.7rem;
