--- a/assets/style.css
+++ b/assets/style.css
@@ -14,7 +14,7 @@ body {
     min-width: 100vw;
 }
 
-.gameArea {
+#game-area {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -33,7 +33,7 @@ body {
 
 /*Need to wrap contents of game area in div and space out*/
 
-.div_scoreBoard {
+.div-scoreBoard {
     font-family: arial; /*TEST checking can style score*/
     background-color: purple; 
     color: white; 
@@ -43,12 +43,12 @@ body {
 
 
 /* To add hover color change to button */
-.btn_start:hover, #btn_refresh:hover {
+.btn-start:hover, #btn-refresh:hover {
     background-color: blue; 
 }
 
 /* Create and style refresh button */
-#btn_refresh {
+#btn-refresh  {
     border-radius: 4px; 
     border: none; 
     padding: 0.35rem;
@@ -64,7 +64,7 @@ body {
     border-radius: 5px; 
 } */
 
-.myWords {
+.div-played-words {
     background-color: paleturquoise;
     font-size: 2rem; 
     border-radius: 5px; 
@@ -76,7 +76,7 @@ body {
     margin: 5px 5px; 
 }
 
-.myInput {
+.input-text {
     letter-spacing: 0.3rem;
     /* max-width: 4.7rem;
     max-height: 3rem; */
@@ -90,7 +90,7 @@ body {
 }
 
 /* Varied by changing CSS from tutorial  */
-.btn_start {
+.btn-start {
     border-radius: 5px;
     border: none;
     padding: 0.75rem;
