--- a/assets/style.css
+++ b/assets/style.css
@@ -87,6 +87,14 @@ body {
     border-radius: 5px;
     padding: 0.75rem;
     margin: 5px 5px;   
+    overflow: hidden; 
+}
+
+::placeholder {
+    font-size: 0.5rem; 
+    width: 50%;
+    text-align: left; 
+    letter-spacing: 0rem;   
 }
 
 /* Varied by changing CSS from tutorial  */
@@ -97,5 +105,7 @@ body {
     margin: 5px 5px;
     width: 7rem;
 }
+
+
 
 
