--- a/assets/style.css
+++ b/assets/style.css
@@ -92,9 +92,9 @@ body {
 
 ::placeholder {
     font-size: 0.5rem; 
-    width: 50%;
-    text-align: left; 
+    text-align: center; 
     letter-spacing: 0rem;   
+    padding-top: 1.6rem; 
 }
 
 /* Varied by changing CSS from tutorial  */
