--- a/assets/style.css
+++ b/assets/style.css
@@ -76,7 +76,7 @@ body {
     margin: 5px 5px; 
 }
 
-#input-text {
+.input-text {
     letter-spacing: 0.3rem;
     /* max-width: 4.7rem;
     max-height: 3rem; */
@@ -110,6 +110,6 @@ body {
     position: absolute;
     bottom: 0.7rem;
     left: 0.5rem;
-  }
+}
 
 
