--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "";
+    /* font-family: 'Patua One', serif;
+    font-family: 'Roboto', sans-serif; */
 }
 
 body {
@@ -12,6 +14,7 @@ body {
     background-color: #f5e5fc;
     min-height: 100vh;
     min-width: 100vw;
+    background-color: #e9c46a; 
 }
 
 #game-area {
@@ -19,7 +22,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #48b8d0;
+    background-color: #2a9d8f;
     padding: 4rem;
     min-width: 20rem;
     max-width: 20rem; 
@@ -35,10 +38,10 @@ body {
 
 .div-scoreboard {
     font-family: arial; /*TEST checking can style score*/
-    background-color: purple; 
     color: white; 
     margin: 5px 5px; 
     letter-spacing: 0.1rem;
+    font-family: 'Patua One', serif;
 }
 
 
@@ -53,6 +56,8 @@ body {
     border: none; 
     padding: 0.35rem;
     margin: 5px 5px; 
+    font-family: 'Patua One', serif;
+    /* border: solid 4px #e76f51; */
 }
 
 /*Created class .click_button so can target text*/
@@ -94,7 +99,7 @@ body {
     font-size: 0.5rem; 
     text-align: center; 
     letter-spacing: 0rem;   
-    padding-top: 1.6rem; 
+    padding-top: 1rem; 
 }
 
 /* Varied by changing CSS from tutorial  */
@@ -105,6 +110,8 @@ body {
     margin: 5px 5px;
     width: 14rem;
     height: 4rem; 
+    font-family: 'Patua One', serif;
+    /* border: solid 8px #e76f51; */
 }
 
 .footer__link {
