Change weight of scoreboard text

--- a/assets/style.css
+++ b/assets/style.css
@@ -41,7 +41,7 @@ body {
     color: white; 
     margin: 5px 5px; 
     letter-spacing: 0.1rem;
-    font-family: 'Patua One', serif;
+    font-family: 'Patua One', serif, 300;
 }
 
 
