--- a/assets/style.css
+++ b/assets/style.css
@@ -114,11 +114,12 @@ body {
     /* border: solid 8px #e76f51; */
 }
 
-.footer__link {
+.footer__link, footer p{
     position: absolute;
     bottom: 0.7rem;
     left: 0.5rem;
     font-size: 0.8rem;
+    font-family: 'Roboto', sans-serif;
 }
 
 
