--- a/assets/style.css
+++ b/assets/style.css
@@ -20,6 +20,8 @@ body {
     color: white;  
     font-size: 1.8rem; 
     text-align: center; 
+    position: absolute; 
+    margin-top: -12rem;
 }
 
 #game-area {
