--- a/assets/style.css
+++ b/assets/style.css
@@ -122,12 +122,19 @@ body {
     /* border: solid 8px #e76f51; */
 }
 
-.footer__link, footer p{
+footer {
+    background-color: #264653;
+}
+
+.footer__link, footer p {
     position: absolute;
     bottom: 0.7rem;
     left: 0.5rem;
     font-size: 0.8rem;
     font-family: 'Roboto', sans-serif;
+    background-color: #264653; 
+    color: white; 
+    display: block; 
 }
 
 
