--- a/assets/style.css
+++ b/assets/style.css
@@ -126,15 +126,19 @@ footer {
     background-color: #264653;
 }
 
-.footer__link, footer p {
+.footer__link  {
     position: absolute;
-    bottom: 0.7rem;
-    left: 0.5rem;
-    font-size: 0.8rem;
-    font-family: 'Roboto', sans-serif;
-    background-color: #264653; 
-    color: white; 
-    display: block; 
+    bottom: 0rem;
+    left: 0rem;
+    right: 0rem;
 }
 
-
+footer p  {
+    background-color: #264653; 
+    font-size: 0.8rem;
+    font-family: 'Roboto', sans-serif;
+    color: white; 
+    text-align: center; 
+    padding-top: 5px; 
+    padding-bottom: 7px; 
+}
