--- a/assets/style.css
+++ b/assets/style.css
@@ -131,6 +131,8 @@ footer {
     bottom: 0rem;
     left: 0rem;
     right: 0rem;
+    margin-bottom: 0; 
+    margin-top: 2rem; 
 }
 
 footer p  {
@@ -141,5 +143,4 @@ footer p  {
     text-align: center; 
     padding-top: 5px; 
     padding-bottom: 7px; 
-    margin-bottom: 0; 
 }
