Add padding to footer

--- a/assets/style.css
+++ b/assets/style.css
@@ -146,5 +146,5 @@ footer p  {
     font-size: 0.8rem;
     font-family: 'Roboto', sans-serif;
     color: white; 
-    padding: 5px 5px; 
+    padding: 0.6rem;
 }
