--- a/assets/style.css
+++ b/assets/style.css
@@ -95,7 +95,7 @@ main {
     position: relative; 
     padding: 0.5rem;
     margin: 5px 5px; 
-    font-family: 'Patua One', serif;
+    font-family: 'Patua One', serif, 400;
 }
 
 .input-text {
@@ -111,6 +111,7 @@ main {
     margin: 5px 5px;   
     overflow: hidden; 
     font-family: 'Roboto', sans-serif;
+    font-weight: 300; 
 }
 
 .input-text::placeholder {
