--- a/assets/style.css
+++ b/assets/style.css
@@ -5,6 +5,16 @@
     font-family: "";
     /* font-family: 'Patua One', serif;
     font-family: 'Roboto', sans-serif; */
+    --scarlet: #F53519ff;
+    --cambridge-blue: #7AB2A9ff;
+    --sandy-brown: #FBAA69ff;
+    --bone: #E2DBC9ff;
+    --space-cadet: #0D2656ff;
+    --giants-orange: #F8682Bff;
+    --lapis-lazuli: #04668Dff;
+    --wheat: #F4DBAFff;
+    --indigo-dye: #0A446Fff;
+    --cerulean: #086D90ff;
 }
 
 body {
@@ -13,7 +23,13 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #e9c46a; 
+    /* background-color: #E2DBC9ff;  */
+    background-image: url("https://i.postimg.cc/7L7rt5Qg/rainbow-background.jpg"); /* The image used */
+    background-color: #cccccc; /* Used if the image is unavailable */
+    height: 500px; /* You must set a specified height */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */  
 }
 
 main {
@@ -28,7 +44,7 @@ main {
     /* flex: 1 0 auto;  */
     align-items: center;
     justify-content: center;
-    background-color: #2a9d8f;
+    background-color: #086D90ff;
     padding: 4rem;
     min-width: 20rem;
     max-width: 20rem; 
@@ -53,7 +69,6 @@ main {
 
 
 .div-scoreboard {
-    font-family: arial; /*TEST checking can style score*/
     color: white; 
     margin: 5px 5px; 
     letter-spacing: 0.1rem;
@@ -63,7 +78,7 @@ main {
 
 /* To add hover color change to button */
 .btn-start:hover, #btn-refresh:hover {
-    background-color: blue; 
+    background-color: #F4DBAFff; 
 }
 
 /* Create and style refresh button */
@@ -73,6 +88,7 @@ main {
     padding: 0.35rem;
     margin: 5px 5px; 
     font-family: 'Patua One', serif;
+    color: #0D2656ff; 
     /* border: solid 4px #e76f51; */
 }
 
@@ -86,7 +102,7 @@ main {
 } */
 
 .div-played-words {
-    background-color: paleturquoise;
+    background-color: #7AB2A9ff;
     font-size: 2rem; 
     border-radius: 5px; 
     width: 14rem;
@@ -130,20 +146,21 @@ main {
     width: 14rem;
     height: 4rem; 
     font-family: 'Patua One', serif;
+    color: #0D2656ff; 
     /* border: solid 8px #e76f51; */
 }
 
 
 
 .footer__link  {
-    background-color: #264653;
+    background-color: #0A446Fff;
     width: 100vw; 
     display: flex; 
     justify-content: center; 
 }
 
 footer p  {
-    background-color: #264653; 
+    background-color: #0A446Fff; 
     font-size: 0.8rem;
     font-family: 'Roboto', sans-serif;
     color: white; 
