--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,9 +64,24 @@ main {
     text-align: center; 
     position: absolute; 
     margin-top: -14rem;
-    padding-bottom: 1.2rem;
+    padding-bottom: 1.4rem;
 }
 
+/* .div-rules {
+    /* width: 40vw;  */
+     
+ 
+ul {
+    color: white;  
+    list-style-type: none;  
+    font-family: 'Patua One', serif;
+    font-size: 0.9rem;
+}
+
+li {
+    font-family: 'Patua One', serif;
+    padding: 0.3rem;
+}
 
 .div-scoreboard {
     color: white; 
@@ -88,6 +103,8 @@ main {
     font-family: 'Patua One', serif;
     color: #0D2656; 
     /* border: solid 8px #e76f51; */
+    margin-bottom: 1.6rem;
+    
 }
 
 
