--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,8 @@ ul {
     list-style-type: none;  
     font-family: 'Patua One', serif;
     font-size: 0.9rem;
-    padding-top: 1rem;
+    padding-top: 2.4rem;
+    padding-bottom: 2rem;
     
 }
 
