--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,13 +30,12 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    /* background-color: #E2DBC9ff;  */
-    background-image: url("https://i.postimg.cc/7L7rt5Qg/rainbow-background.jpg"); /* The image used */
-    background-color: #cccccc; /* Used if the image is unavailable */
-    height: 500px; /* You must set a specified height */
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
-    background-size: cover; /* Resize the background image to cover the entire container */  
+    background-image: url("https://i.postimg.cc/7L7rt5Qg/rainbow-background.jpg"); 
+    background-color: #cccccc; 
+    height: 500px; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover; 
 }
 
 main {
@@ -55,15 +54,13 @@ main {
     padding: 4rem;
     min-width: 20rem;
     max-width: 20rem; 
-    /*to stop the cards from changing size with different words*/
-    /* Setting min and max width works but not responsive */
-    /* All boxes are jumping around during gameplay - want all fixed. */
+    /* All boxes are jumping around during gameplay*/
+    /*To stop the cards from changing size with different words*/
+    /* Setting min and max width works but not responsive - looks fine on iphone and ipad. */
     max-height: 20rem;
     min-height: 20rem; 
     border-radius: 5px;
 }
-
-/*Need to wrap contents of game area in div and space out*/
 
 #heading-wordscramble {
     color: white;  
@@ -73,19 +70,14 @@ main {
     margin-top: -13rem;
     padding-bottom: 1.4rem;
 }
-
-/* .div-rules {
-    /* width: 40vw;  */
-     
- 
+    
 ul {
     color: white;  
     list-style-type: none;  
     font-family: 'Patua One', serif;
     font-size: 0.9rem;
     padding-top: 2.4rem;
-    padding-bottom: 2rem;
-    
+    padding-bottom: 2rem;    
 }
 
 li {
@@ -100,8 +92,6 @@ li {
     font-family: 'Patua One', serif, 300;
 }
 
-
-/* Varied by changing CSS from tutorial  */
 .btn-start {
     border-radius: 5px;
     border: none;
@@ -119,7 +109,6 @@ button {
 cursor:pointer;
 }
 
-/* To add hover color change to button */
 .btn-start:hover, #btn-refresh:hover {
     background-color: #fdeda8; 
 }
@@ -148,12 +137,6 @@ cursor:pointer;
     font-family: 'Patua One', serif, 400;
 }
 
-/* input:focus, textarea:focus, select:focus{
-    outline: none;
-} */
-
-/* Stopped all from jumping around by making input
- same size a button - padding, margin and width */
 .input-text {
     letter-spacing: 0.3rem;
     width: 14rem;    
