--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Patua+One&family=Roboto:wght@300&display=swap');
 
 :root {
+
+    /* Codes from background image - remove final "ff" */
     --scarlet: #F53519ff;
     --cambridge-blue: #7AB2A9ff;
     --sandy-brown: #FBAA69ff;
@@ -15,7 +16,6 @@
     font-family: 'Patua One', serif;
     font-family: 'Roboto', sans-serif
 }
-
 
 * {
     margin: 0;
