--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Patua+One&family=Roboto:wght@300&display=swap');
 
-:root {
 
-    /* Codes from background image - remove final "ff" */
+/* The javascript is based on Udemy Tutorial by Laurence Svekis:
+"JavaScript Create 5 Fun Word Games"
+The tutorial including minimal CSS; this CSS is my own work.*/
+
+:root {
+ /* Codes from background image - remove final "ff" */
     --scarlet: #F53519ff;
     --cambridge-blue: #7AB2A9ff;
     --sandy-brown: #FBAA69ff;
