--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,8 @@ main {
     position: absolute; 
     margin-top: -13rem;
     padding-bottom: 1.4rem;
+    font-family: 'Patua One', serif;
+    font-weight: normal;
 }
     
 ul {
